bugfix, match test code